kajit/tests/snapshots/corpus__generated_postreg_disasm_postcard_default_field_aarch64.snap
---
source: kajit/tests/corpus.rs
assertion_line: 578
expression: disasm
---
> sub sp, sp, #0x70
  stp x29, x30, [sp]
  stp x19, x20, [sp, #0x10]
  stp x21, x22, [sp, #0x20]
  stp x23, x24, [sp, #0x30]
  stp x25, x26, [sp, #0x40]
  mov x29, sp
  mov x21, x0
  mov x22, x1
  ldr x19, [x22]
  ldr x20, [x22, #0x8]
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x3b0
  mov x9, #<imm>
  mov x2, x9
  mov x9, #<imm>
  mov x15, x9
  mov x9, #<imm>
  mov x14, x9
  mov x9, #<imm>
  mov x13, x9
  mov x9, #<imm>
  mov x12, x9
  mov x9, #<imm>
  mov x11, x9
  mov x9, #<imm>
  mov x26, x9
  str x26, [sp, #0x50]
  mov x9, #<imm>
  mov x26, x9
  str x26, [sp, #0x58]
  mov x9, #<imm>
  mov x26, x9
  mov x9, #<imm>
  mov x25, x9
  mov x9, #<imm>
  mov x24, x9
  mov x9, #<imm>
  mov x23, x9
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x330
  ldrb w9, [x19]
  mov x0, x9
  add x19, x19, #0x1
  mov x17, x0
  and x17, x17, x2
  and x15, x15, x0
  cmp x15, x14
  b.ne $+0x24
  mov x9, #<imm>
  mov x14, x9
  mov x9, #<imm>
  mov x15, x9
  mov x14, x17
  mov x0, x15
  mov x0, x15
  b $+0xd8
  mov x9, #<imm>
  mov x15, x9
  mov x9, #<imm>
  mov x0, x9
  mov x9, #<imm>
  mov x14, x9
  mov x14, x17
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x2bc
  mov x9, #<imm>
  mov x2, x9
  mov x9, #<imm>
  mov x1, x9
  mov x9, #<imm>
  mov x6, x9
  mov x9, #<imm>
  mov x4, x9
  mov x9, #<imm>
  mov x3, x9
  mov x9, #<imm>
  mov x5, x9
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x274
  ldrb w9, [x19]
  mov x7, x9
  add x19, x19, #0x1
  add x1, x1, x15
  sub x0, x0, x6
  and x2, x2, x7
  and x4, x4, x7
  cmp x0, x5
  cset x7, ne
  mov x9, x2
  mov x10, x15
  lsl x9, x9, x10
  mov x15, x9
  cmp x4, x3
  cset x6, ne
  orr x14, x14, x15
  mov x15, x1
  mov x1, x2
  mov x2, x6
  cbz x6, $+0x8
  cbnz x7, $+0x23c
  mov x0, x2
  cmp x0, x13
  mov x9, x14
  mov x10, x12
  lsr x9, x9, x10
  mov x12, x9
  b.ne $+0x8
  b $+0x10
  mov w9, #0x2
  str w9, [x22, #0x10]
  b $+0x1f4
  cmp x12, x11
  b.ne $+0x8
  b $+0x10
  mov w9, #0xc
  str w9, [x22, #0x10]
  b $+0x1dc
  str x19, [x22]
  mov x0, x22
  mov x1, x14
  add x2, x21, #0x0
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x1b0
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x198
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x180
  ldrb w9, [x19]
  mov x12, x9
  add x19, x19, #0x1
  ldr x1, [sp, #0x50]
  mov x11, x12
  and x11, x11, x1
  ldr x2, [sp, #0x58]
  and x12, x12, x2
  cmp x12, x26
  b.ne $+0x24
  mov x9, #<imm>
  mov x12, x9
  mov x9, #<imm>
  mov x12, x9
  mov x26, x11
  mov x11, x12
  mov x11, x12
  b $+0xd8
  mov x9, #<imm>
  mov x12, x9
  mov x9, #<imm>
  mov x13, x9
  mov x9, #<imm>
  mov x14, x9
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x108
  mov x9, #<imm>
  mov x14, x9
  mov x9, #<imm>
  mov x26, x9
  mov x9, #<imm>
  mov x2, x9
  mov x9, #<imm>
  mov x0, x9
  mov x9, #<imm>
  mov x15, x9
  mov x9, #<imm>
  mov x1, x9
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0xc0
  ldrb w9, [x19]
  mov x17, x9
  add x19, x19, #0x1
  add x26, x26, x12
  sub x13, x13, x2
  and x14, x14, x17
  mov x2, x17
  and x2, x2, x0
  cmp x13, x1
  cset x0, ne
  mov x9, x14
  mov x10, x12
  lsl x9, x9, x10
  mov x12, x9
  cmp x2, x15
  cset x15, ne
  orr x11, x11, x12
  mov x12, x26
  mov x14, x15
  cbz x15, $+0x8
  cbnz x0, $-0xb0
  mov x26, x11
  mov x11, x14
  cmp x11, x25
  mov x11, x26
  lsr x11, x11, x24
  b.ne $+0x8
  b $+0x10
  mov w9, #0x2
  str w9, [x22, #0x10]
  b $+0x44
  cmp x11, x23
  b.ne $+0x8
  b $+0x10
  mov w9, #0xc
  str w9, [x22, #0x10]
  b $+0x2c
  mov x9, x26
  str w9, [x21, #0x18]
  str x19, [x22]
  ldp x25, x26, [sp, #0x40]
  ldp x23, x24, [sp, #0x30]
  ldp x21, x22, [sp, #0x20]
  ldp x19, x20, [sp, #0x10]
  ldp x29, x30, [sp]
  add sp, sp, #0x70
  ret
  ldp x25, x26, [sp, #0x40]
  ldp x23, x24, [sp, #0x30]
  ldp x21, x22, [sp, #0x20]
  ldp x19, x20, [sp, #0x10]
  ldp x29, x30, [sp]
  add sp, sp, #0x70
  ret
