kajit/tests/snapshots/corpus__generated_postreg_disasm_postcard_enum_as_struct_field_aarch64.snap
---
source: kajit/tests/corpus.rs
expression: disasm
---
> sub sp, sp, #0x60
  stp x29, x30, [sp]
  stp x19, x20, [sp, #0x10]
  stp x21, x22, [sp, #0x20]
  stp x23, x24, [sp, #0x30]
  stp x25, x26, [sp, #0x40]
  mov x29, sp
  mov x21, x0
  mov x22, x1
  ldr x19, [x22]
  ldr x20, [x22, #0x8]
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x21c
  mov x9, #<imm>
  mov x14, x9
  mov x9, #<imm>
  mov x24, x9
  mov x9, #<imm>
  mov x15, x9
  mov x9, #<imm>
  mov x13, x9
  mov x9, #<imm>
  mov x12, x9
  mov x9, #<imm>
  mov x11, x9
  mov x9, #<imm>
  mov x23, x9
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x1cc
  ldrb w9, [x19]
  mov x25, x9
  add x19, x19, #0x1
  and x14, x14, x25
  and x24, x24, x25
  cmp x24, x15
  b.ne $+0x20
  mov x9, #<imm>
  mov x24, x9
  mov x9, #<imm>
  mov x24, x9
  mov x15, x24
  mov x15, x24
  b $+0xd4
  mov x9, #<imm>
  mov x15, x9
  mov x9, #<imm>
  mov x24, x9
  mov x9, #<imm>
  mov x25, x9
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x164
  mov x9, #<imm>
  mov x26, x9
  mov x9, #<imm>
  mov x25, x9
  mov x9, #<imm>
  mov x3, x9
  mov x9, #<imm>
  mov x1, x9
  mov x9, #<imm>
  mov x0, x9
  mov x9, #<imm>
  mov x2, x9
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x11c
  ldrb w9, [x19]
  mov x4, x9
  add x19, x19, #0x1
  add x25, x25, x15
  sub x24, x24, x3
  and x26, x26, x4
  and x1, x1, x4
  cmp x24, x2
  cset x2, ne
  mov x9, x26
  mov x10, x15
  lsl x9, x9, x10
  mov x15, x9
  cmp x1, x0
  cset x1, ne
  orr x14, x14, x15
  mov x15, x25
  mov x25, x26
  mov x25, x1
  cbz x1, $+0x8
  cbnz x2, $-0xb0
  mov x15, x25
  cmp x15, x13
  mov x24, x14
  lsr x24, x24, x12
  b.ne $+0x8
  b $+0x10
  mov w9, #0x2
  str w9, [x22, #0x10]
  b $+0xa4
  cmp x24, x11
  b.ne $+0x8
  b $+0x10
  mov w9, #0xc
  str w9, [x22, #0x10]
  b $+0x8c
  str x19, [x22]
  mov x0, x22
  mov x1, x14
  add x2, x21, #0x0
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x60
  mov x9, x21
  mov x24, x9
  mov x11, x24
  add x11, x11, x23
  mov x9, x11
  mov x21, x9
  str x19, [x22]
  mov x0, x21
  mov x1, x22
  bl $+0x54
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x2c
  mov x9, x24
  mov x21, x9
  str x19, [x22]
  ldp x25, x26, [sp, #0x40]
  ldp x23, x24, [sp, #0x30]
  ldp x21, x22, [sp, #0x20]
  ldp x19, x20, [sp, #0x10]
  ldp x29, x30, [sp]
  add sp, sp, #0x60
  ret
  ldp x25, x26, [sp, #0x40]
  ldp x23, x24, [sp, #0x30]
  ldp x21, x22, [sp, #0x20]
  ldp x19, x20, [sp, #0x10]
  ldp x29, x30, [sp]
  add sp, sp, #0x60
  ret
